marathi/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     block -> LBRACE statement_list RBRACE
Rule 5     block -> LBRACE RBRACE
Rule 6     statement -> IF expression THEN block
Rule 7     statement -> IF expression THEN block ELSE block
Rule 8     statement -> IF expression THEN block ELSE statement
Rule 9     statement -> VAR IDENTIFIER EQUALS expression
Rule 10    statement -> IDENTIFIER EQUALS expression
Rule 11    statement -> IDENTIFIER LBRACKET expression RBRACKET EQUALS expression
Rule 12    statement -> WHILE expression block
Rule 13    for_init -> VAR IDENTIFIER EQUALS expression
Rule 14    for_init -> IDENTIFIER EQUALS expression
Rule 15    statement -> FOR LPAREN for_init SEMICOLON expression SEMICOLON for_init RPAREN block
Rule 16    statement -> BREAK
Rule 17    statement -> CONTINUE
Rule 18    statement -> PRINT LPAREN expression RPAREN
Rule 19    statement -> RETURN expression
Rule 20    statement -> IDENTIFIER LPAREN arg_list RPAREN
Rule 21    param_list -> IDENTIFIER
Rule 22    param_list -> param_list COMMA IDENTIFIER
Rule 23    param_list -> <empty>
Rule 24    statement -> FUNCTION IDENTIFIER LPAREN param_list RPAREN block
Rule 25    expression -> expression PLUS expression
Rule 26    expression -> expression MINUS expression
Rule 27    expression -> expression TIMES expression
Rule 28    expression -> expression DIVIDE expression
Rule 29    expression -> expression MODULO expression
Rule 30    expression -> expression GT expression
Rule 31    expression -> expression LT expression
Rule 32    expression -> expression GE expression
Rule 33    expression -> expression LE expression
Rule 34    expression -> expression EQ expression
Rule 35    expression -> expression NE expression
Rule 36    expression -> expression AND expression
Rule 37    expression -> expression OR expression
Rule 38    expression -> NOT expression
Rule 39    expression -> LPAREN expression RPAREN
Rule 40    expression -> NUMBER
Rule 41    expression -> STRING
Rule 42    expression -> TRUE
Rule 43    expression -> FALSE
Rule 44    expression -> IDENTIFIER
Rule 45    expression -> LBRACKET arg_list RBRACKET
Rule 46    expression -> expression LBRACKET expression RBRACKET
Rule 47    arg_list -> expression
Rule 48    arg_list -> arg_list COMMA expression
Rule 49    arg_list -> <empty>
Rule 50    expression -> IDENTIFIER LPAREN arg_list RPAREN

Terminals, with rules where they appear

AND                  : 36
BREAK                : 16
COMMA                : 22 48
CONTINUE             : 17
DIVIDE               : 28
ELSE                 : 7 8
EQ                   : 34
EQUALS               : 9 10 11 13 14
FALSE                : 43
FOR                  : 15
FUNCTION             : 24
GE                   : 32
GT                   : 30
IDENTIFIER           : 9 10 11 13 14 20 21 22 24 44 50
IF                   : 6 7 8
LBRACE               : 4 5
LBRACKET             : 11 45 46
LE                   : 33
LPAREN               : 15 18 20 24 39 50
LT                   : 31
MINUS                : 26
MODULO               : 29
NE                   : 35
NOT                  : 38
NUMBER               : 40
OR                   : 37
PLUS                 : 25
PRINT                : 18
RBRACE               : 4 5
RBRACKET             : 11 45 46
RETURN               : 19
RPAREN               : 15 18 20 24 39 50
SEMICOLON            : 15 15
STRING               : 41
THEN                 : 6 7 8
TIMES                : 27
TRUE                 : 42
VAR                  : 9 13
WHILE                : 12
error                : 

Nonterminals, with rules where they appear

arg_list             : 20 45 48 50
block                : 6 7 7 8 12 15 24
expression           : 6 7 8 9 10 11 11 12 13 14 15 18 19 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 39 46 46 47 48
for_init             : 15 15
param_list           : 22 24
program              : 0
statement            : 2 3 8
statement_list       : 1 3 4

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (6) statement -> . IF expression THEN block
    (7) statement -> . IF expression THEN block ELSE block
    (8) statement -> . IF expression THEN block ELSE statement
    (9) statement -> . VAR IDENTIFIER EQUALS expression
    (10) statement -> . IDENTIFIER EQUALS expression
    (11) statement -> . IDENTIFIER LBRACKET expression RBRACKET EQUALS expression
    (12) statement -> . WHILE expression block
    (15) statement -> . FOR LPAREN for_init SEMICOLON expression SEMICOLON for_init RPAREN block
    (16) statement -> . BREAK
    (17) statement -> . CONTINUE
    (18) statement -> . PRINT LPAREN expression RPAREN
    (19) statement -> . RETURN expression
    (20) statement -> . IDENTIFIER LPAREN arg_list RPAREN
    (24) statement -> . FUNCTION IDENTIFIER LPAREN param_list RPAREN block

    IF              shift and go to state 4
    VAR             shift and go to state 5
    IDENTIFIER      shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 10
    PRINT           shift and go to state 11
    RETURN          shift and go to state 12
    FUNCTION        shift and go to state 13

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (6) statement -> . IF expression THEN block
    (7) statement -> . IF expression THEN block ELSE block
    (8) statement -> . IF expression THEN block ELSE statement
    (9) statement -> . VAR IDENTIFIER EQUALS expression
    (10) statement -> . IDENTIFIER EQUALS expression
    (11) statement -> . IDENTIFIER LBRACKET expression RBRACKET EQUALS expression
    (12) statement -> . WHILE expression block
    (15) statement -> . FOR LPAREN for_init SEMICOLON expression SEMICOLON for_init RPAREN block
    (16) statement -> . BREAK
    (17) statement -> . CONTINUE
    (18) statement -> . PRINT LPAREN expression RPAREN
    (19) statement -> . RETURN expression
    (20) statement -> . IDENTIFIER LPAREN arg_list RPAREN
    (24) statement -> . FUNCTION IDENTIFIER LPAREN param_list RPAREN block

    $end            reduce using rule 1 (program -> statement_list .)
    IF              shift and go to state 4
    VAR             shift and go to state 5
    IDENTIFIER      shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 10
    PRINT           shift and go to state 11
    RETURN          shift and go to state 12
    FUNCTION        shift and go to state 13

    statement                      shift and go to state 14

state 3

    (2) statement_list -> statement .

    IF              reduce using rule 2 (statement_list -> statement .)
    VAR             reduce using rule 2 (statement_list -> statement .)
    IDENTIFIER      reduce using rule 2 (statement_list -> statement .)
    WHILE           reduce using rule 2 (statement_list -> statement .)
    FOR             reduce using rule 2 (statement_list -> statement .)
    BREAK           reduce using rule 2 (statement_list -> statement .)
    CONTINUE        reduce using rule 2 (statement_list -> statement .)
    PRINT           reduce using rule 2 (statement_list -> statement .)
    RETURN          reduce using rule 2 (statement_list -> statement .)
    FUNCTION        reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement .)


state 4

    (6) statement -> IF . expression THEN block
    (7) statement -> IF . expression THEN block ELSE block
    (8) statement -> IF . expression THEN block ELSE statement
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression DIVIDE expression
    (29) expression -> . expression MODULO expression
    (30) expression -> . expression GT expression
    (31) expression -> . expression LT expression
    (32) expression -> . expression GE expression
    (33) expression -> . expression LE expression
    (34) expression -> . expression EQ expression
    (35) expression -> . expression NE expression
    (36) expression -> . expression AND expression
    (37) expression -> . expression OR expression
    (38) expression -> . NOT expression
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . NUMBER
    (41) expression -> . STRING
    (42) expression -> . TRUE
    (43) expression -> . FALSE
    (44) expression -> . IDENTIFIER
    (45) expression -> . LBRACKET arg_list RBRACKET
    (46) expression -> . expression LBRACKET expression RBRACKET
    (50) expression -> . IDENTIFIER LPAREN arg_list RPAREN

    NOT             shift and go to state 16
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 18
    STRING          shift and go to state 19
    TRUE            shift and go to state 20
    FALSE           shift and go to state 21
    IDENTIFIER      shift and go to state 22
    LBRACKET        shift and go to state 23

    expression                     shift and go to state 15

state 5

    (9) statement -> VAR . IDENTIFIER EQUALS expression

    IDENTIFIER      shift and go to state 24


state 6

    (10) statement -> IDENTIFIER . EQUALS expression
    (11) statement -> IDENTIFIER . LBRACKET expression RBRACKET EQUALS expression
    (20) statement -> IDENTIFIER . LPAREN arg_list RPAREN

    EQUALS          shift and go to state 25
    LBRACKET        shift and go to state 26
    LPAREN          shift and go to state 27


state 7

    (12) statement -> WHILE . expression block
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression DIVIDE expression
    (29) expression -> . expression MODULO expression
    (30) expression -> . expression GT expression
    (31) expression -> . expression LT expression
    (32) expression -> . expression GE expression
    (33) expression -> . expression LE expression
    (34) expression -> . expression EQ expression
    (35) expression -> . expression NE expression
    (36) expression -> . expression AND expression
    (37) expression -> . expression OR expression
    (38) expression -> . NOT expression
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . NUMBER
    (41) expression -> . STRING
    (42) expression -> . TRUE
    (43) expression -> . FALSE
    (44) expression -> . IDENTIFIER
    (45) expression -> . LBRACKET arg_list RBRACKET
    (46) expression -> . expression LBRACKET expression RBRACKET
    (50) expression -> . IDENTIFIER LPAREN arg_list RPAREN

    NOT             shift and go to state 16
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 18
    STRING          shift and go to state 19
    TRUE            shift and go to state 20
    FALSE           shift and go to state 21
    IDENTIFIER      shift and go to state 22
    LBRACKET        shift and go to state 23

    expression                     shift and go to state 28

state 8

    (15) statement -> FOR . LPAREN for_init SEMICOLON expression SEMICOLON for_init RPAREN block

    LPAREN          shift and go to state 29


state 9

    (16) statement -> BREAK .

    IF              reduce using rule 16 (statement -> BREAK .)
    VAR             reduce using rule 16 (statement -> BREAK .)
    IDENTIFIER      reduce using rule 16 (statement -> BREAK .)
    WHILE           reduce using rule 16 (statement -> BREAK .)
    FOR             reduce using rule 16 (statement -> BREAK .)
    BREAK           reduce using rule 16 (statement -> BREAK .)
    CONTINUE        reduce using rule 16 (statement -> BREAK .)
    PRINT           reduce using rule 16 (statement -> BREAK .)
    RETURN          reduce using rule 16 (statement -> BREAK .)
    FUNCTION        reduce using rule 16 (statement -> BREAK .)
    $end            reduce using rule 16 (statement -> BREAK .)
    RBRACE          reduce using rule 16 (statement -> BREAK .)


state 10

    (17) statement -> CONTINUE .

    IF              reduce using rule 17 (statement -> CONTINUE .)
    VAR             reduce using rule 17 (statement -> CONTINUE .)
    IDENTIFIER      reduce using rule 17 (statement -> CONTINUE .)
    WHILE           reduce using rule 17 (statement -> CONTINUE .)
    FOR             reduce using rule 17 (statement -> CONTINUE .)
    BREAK           reduce using rule 17 (statement -> CONTINUE .)
    CONTINUE        reduce using rule 17 (statement -> CONTINUE .)
    PRINT           reduce using rule 17 (statement -> CONTINUE .)
    RETURN          reduce using rule 17 (statement -> CONTINUE .)
    FUNCTION        reduce using rule 17 (statement -> CONTINUE .)
    $end            reduce using rule 17 (statement -> CONTINUE .)
    RBRACE          reduce using rule 17 (statement -> CONTINUE .)


state 11

    (18) statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 30


state 12

    (19) statement -> RETURN . expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression DIVIDE expression
    (29) expression -> . expression MODULO expression
    (30) expression -> . expression GT expression
    (31) expression -> . expression LT expression
    (32) expression -> . expression GE expression
    (33) expression -> . expression LE expression
    (34) expression -> . expression EQ expression
    (35) expression -> . expression NE expression
    (36) expression -> . expression AND expression
    (37) expression -> . expression OR expression
    (38) expression -> . NOT expression
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . NUMBER
    (41) expression -> . STRING
    (42) expression -> . TRUE
    (43) expression -> . FALSE
    (44) expression -> . IDENTIFIER
    (45) expression -> . LBRACKET arg_list RBRACKET
    (46) expression -> . expression LBRACKET expression RBRACKET
    (50) expression -> . IDENTIFIER LPAREN arg_list RPAREN

    NOT             shift and go to state 16
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 18
    STRING          shift and go to state 19
    TRUE            shift and go to state 20
    FALSE           shift and go to state 21
    IDENTIFIER      shift and go to state 22
    LBRACKET        shift and go to state 23

    expression                     shift and go to state 31

state 13

    (24) statement -> FUNCTION . IDENTIFIER LPAREN param_list RPAREN block

    IDENTIFIER      shift and go to state 32


state 14

    (3) statement_list -> statement_list statement .

    IF              reduce using rule 3 (statement_list -> statement_list statement .)
    VAR             reduce using rule 3 (statement_list -> statement_list statement .)
    IDENTIFIER      reduce using rule 3 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 3 (statement_list -> statement_list statement .)
    FOR             reduce using rule 3 (statement_list -> statement_list statement .)
    BREAK           reduce using rule 3 (statement_list -> statement_list statement .)
    CONTINUE        reduce using rule 3 (statement_list -> statement_list statement .)
    PRINT           reduce using rule 3 (statement_list -> statement_list statement .)
    RETURN          reduce using rule 3 (statement_list -> statement_list statement .)
    FUNCTION        reduce using rule 3 (statement_list -> statement_list statement .)
    $end            reduce using rule 3 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement_list statement .)


state 15

    (6) statement -> IF expression . THEN block
    (7) statement -> IF expression . THEN block ELSE block
    (8) statement -> IF expression . THEN block ELSE statement
    (25) expression -> expression . PLUS expression
    (26) expression -> expression . MINUS expression
    (27) expression -> expression . TIMES expression
    (28) expression -> expression . DIVIDE expression
    (29) expression -> expression . MODULO expression
    (30) expression -> expression . GT expression
    (31) expression -> expression . LT expression
    (32) expression -> expression . GE expression
    (33) expression -> expression . LE expression
    (34) expression -> expression . EQ expression
    (35) expression -> expression . NE expression
    (36) expression -> expression . AND expression
    (37) expression -> expression . OR expression
    (46) expression -> expression . LBRACKET expression RBRACKET

    THEN            shift and go to state 33
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    TIMES           shift and go to state 36
    DIVIDE          shift and go to state 37
    MODULO          shift and go to state 38
    GT              shift and go to state 39
    LT              shift and go to state 40
    GE              shift and go to state 41
    LE              shift and go to state 42
    EQ              shift and go to state 43
    NE              shift and go to state 44
    AND             shift and go to state 45
    OR              shift and go to state 46
    LBRACKET        shift and go to state 47


state 16

    (38) expression -> NOT . expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression DIVIDE expression
    (29) expression -> . expression MODULO expression
    (30) expression -> . expression GT expression
    (31) expression -> . expression LT expression
    (32) expression -> . expression GE expression
    (33) expression -> . expression LE expression
    (34) expression -> . expression EQ expression
    (35) expression -> . expression NE expression
    (36) expression -> . expression AND expression
    (37) expression -> . expression OR expression
    (38) expression -> . NOT expression
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . NUMBER
    (41) expression -> . STRING
    (42) expression -> . TRUE
    (43) expression -> . FALSE
    (44) expression -> . IDENTIFIER
    (45) expression -> . LBRACKET arg_list RBRACKET
    (46) expression -> . expression LBRACKET expression RBRACKET
    (50) expression -> . IDENTIFIER LPAREN arg_list RPAREN

    NOT             shift and go to state 16
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 18
    STRING          shift and go to state 19
    TRUE            shift and go to state 20
    FALSE           shift and go to state 21
    IDENTIFIER      shift and go to state 22
    LBRACKET        shift and go to state 23

    expression                     shift and go to state 48

state 17

    (39) expression -> LPAREN . expression RPAREN
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression DIVIDE expression
    (29) expression -> . expression MODULO expression
    (30) expression -> . expression GT expression
    (31) expression -> . expression LT expression
    (32) expression -> . expression GE expression
    (33) expression -> . expression LE expression
    (34) expression -> . expression EQ expression
    (35) expression -> . expression NE expression
    (36) expression -> . expression AND expression
    (37) expression -> . expression OR expression
    (38) expression -> . NOT expression
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . NUMBER
    (41) expression -> . STRING
    (42) expression -> . TRUE
    (43) expression -> . FALSE
    (44) expression -> . IDENTIFIER
    (45) expression -> . LBRACKET arg_list RBRACKET
    (46) expression -> . expression LBRACKET expression RBRACKET
    (50) expression -> . IDENTIFIER LPAREN arg_list RPAREN

    NOT             shift and go to state 16
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 18
    STRING          shift and go to state 19
    TRUE            shift and go to state 20
    FALSE           shift and go to state 21
    IDENTIFIER      shift and go to state 22
    LBRACKET        shift and go to state 23

    expression                     shift and go to state 49

state 18

    (40) expression -> NUMBER .

    THEN            reduce using rule 40 (expression -> NUMBER .)
    PLUS            reduce using rule 40 (expression -> NUMBER .)
    MINUS           reduce using rule 40 (expression -> NUMBER .)
    TIMES           reduce using rule 40 (expression -> NUMBER .)
    DIVIDE          reduce using rule 40 (expression -> NUMBER .)
    MODULO          reduce using rule 40 (expression -> NUMBER .)
    GT              reduce using rule 40 (expression -> NUMBER .)
    LT              reduce using rule 40 (expression -> NUMBER .)
    GE              reduce using rule 40 (expression -> NUMBER .)
    LE              reduce using rule 40 (expression -> NUMBER .)
    EQ              reduce using rule 40 (expression -> NUMBER .)
    NE              reduce using rule 40 (expression -> NUMBER .)
    AND             reduce using rule 40 (expression -> NUMBER .)
    OR              reduce using rule 40 (expression -> NUMBER .)
    LBRACKET        reduce using rule 40 (expression -> NUMBER .)
    LBRACE          reduce using rule 40 (expression -> NUMBER .)
    IF              reduce using rule 40 (expression -> NUMBER .)
    VAR             reduce using rule 40 (expression -> NUMBER .)
    IDENTIFIER      reduce using rule 40 (expression -> NUMBER .)
    WHILE           reduce using rule 40 (expression -> NUMBER .)
    FOR             reduce using rule 40 (expression -> NUMBER .)
    BREAK           reduce using rule 40 (expression -> NUMBER .)
    CONTINUE        reduce using rule 40 (expression -> NUMBER .)
    PRINT           reduce using rule 40 (expression -> NUMBER .)
    RETURN          reduce using rule 40 (expression -> NUMBER .)
    FUNCTION        reduce using rule 40 (expression -> NUMBER .)
    $end            reduce using rule 40 (expression -> NUMBER .)
    RBRACE          reduce using rule 40 (expression -> NUMBER .)
    RPAREN          reduce using rule 40 (expression -> NUMBER .)
    RBRACKET        reduce using rule 40 (expression -> NUMBER .)
    COMMA           reduce using rule 40 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 40 (expression -> NUMBER .)


state 19

    (41) expression -> STRING .

    THEN            reduce using rule 41 (expression -> STRING .)
    PLUS            reduce using rule 41 (expression -> STRING .)
    MINUS           reduce using rule 41 (expression -> STRING .)
    TIMES           reduce using rule 41 (expression -> STRING .)
    DIVIDE          reduce using rule 41 (expression -> STRING .)
    MODULO          reduce using rule 41 (expression -> STRING .)
    GT              reduce using rule 41 (expression -> STRING .)
    LT              reduce using rule 41 (expression -> STRING .)
    GE              reduce using rule 41 (expression -> STRING .)
    LE              reduce using rule 41 (expression -> STRING .)
    EQ              reduce using rule 41 (expression -> STRING .)
    NE              reduce using rule 41 (expression -> STRING .)
    AND             reduce using rule 41 (expression -> STRING .)
    OR              reduce using rule 41 (expression -> STRING .)
    LBRACKET        reduce using rule 41 (expression -> STRING .)
    LBRACE          reduce using rule 41 (expression -> STRING .)
    IF              reduce using rule 41 (expression -> STRING .)
    VAR             reduce using rule 41 (expression -> STRING .)
    IDENTIFIER      reduce using rule 41 (expression -> STRING .)
    WHILE           reduce using rule 41 (expression -> STRING .)
    FOR             reduce using rule 41 (expression -> STRING .)
    BREAK           reduce using rule 41 (expression -> STRING .)
    CONTINUE        reduce using rule 41 (expression -> STRING .)
    PRINT           reduce using rule 41 (expression -> STRING .)
    RETURN          reduce using rule 41 (expression -> STRING .)
    FUNCTION        reduce using rule 41 (expression -> STRING .)
    $end            reduce using rule 41 (expression -> STRING .)
    RBRACE          reduce using rule 41 (expression -> STRING .)
    RPAREN          reduce using rule 41 (expression -> STRING .)
    RBRACKET        reduce using rule 41 (expression -> STRING .)
    COMMA           reduce using rule 41 (expression -> STRING .)
    SEMICOLON       reduce using rule 41 (expression -> STRING .)


state 20

    (42) expression -> TRUE .

    THEN            reduce using rule 42 (expression -> TRUE .)
    PLUS            reduce using rule 42 (expression -> TRUE .)
    MINUS           reduce using rule 42 (expression -> TRUE .)
    TIMES           reduce using rule 42 (expression -> TRUE .)
    DIVIDE          reduce using rule 42 (expression -> TRUE .)
    MODULO          reduce using rule 42 (expression -> TRUE .)
    GT              reduce using rule 42 (expression -> TRUE .)
    LT              reduce using rule 42 (expression -> TRUE .)
    GE              reduce using rule 42 (expression -> TRUE .)
    LE              reduce using rule 42 (expression -> TRUE .)
    EQ              reduce using rule 42 (expression -> TRUE .)
    NE              reduce using rule 42 (expression -> TRUE .)
    AND             reduce using rule 42 (expression -> TRUE .)
    OR              reduce using rule 42 (expression -> TRUE .)
    LBRACKET        reduce using rule 42 (expression -> TRUE .)
    LBRACE          reduce using rule 42 (expression -> TRUE .)
    IF              reduce using rule 42 (expression -> TRUE .)
    VAR             reduce using rule 42 (expression -> TRUE .)
    IDENTIFIER      reduce using rule 42 (expression -> TRUE .)
    WHILE           reduce using rule 42 (expression -> TRUE .)
    FOR             reduce using rule 42 (expression -> TRUE .)
    BREAK           reduce using rule 42 (expression -> TRUE .)
    CONTINUE        reduce using rule 42 (expression -> TRUE .)
    PRINT           reduce using rule 42 (expression -> TRUE .)
    RETURN          reduce using rule 42 (expression -> TRUE .)
    FUNCTION        reduce using rule 42 (expression -> TRUE .)
    $end            reduce using rule 42 (expression -> TRUE .)
    RBRACE          reduce using rule 42 (expression -> TRUE .)
    RPAREN          reduce using rule 42 (expression -> TRUE .)
    RBRACKET        reduce using rule 42 (expression -> TRUE .)
    COMMA           reduce using rule 42 (expression -> TRUE .)
    SEMICOLON       reduce using rule 42 (expression -> TRUE .)


state 21

    (43) expression -> FALSE .
